unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/zkmulti__Shipmate_Preference_Info__c.object-meta.xml
<CustomObject>
    <label>Shipmate Preference Info</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Shipmate Preference Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipmate Preference Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>