unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__AccountIsSetupForSmartPostOutbound__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AccountIsSetupForSmartPostOutbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account is Setup for SmartPost Outbound</label>
    <type>Checkbox</type>
</CustomField>