unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Allow_Record_Delete__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Allow_Record_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Record Delete</label>
    <type>Checkbox</type>
</CustomField>