unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_Client_Id__c</fullName>
    <description>DHL Global Mail ClientID</description>
    <inlineHelpText>DHL Global Mail ClientID</inlineHelpText>
    <label>Carrier Account Client Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>