unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_ePacket__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_ePacket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asendia USA ePacket</description>
    <inlineHelpText>Asendia USA ePacket</inlineHelpText>
    <label>Carrier Account ePacket</label>
    <type>Checkbox</type>
</CustomField>