unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_International_Express__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_International_Express__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asendia Account International Express</description>
    <inlineHelpText>Asendia Account International Express</inlineHelpText>
    <label>Carrier Account International Express</label>
    <type>Checkbox</type>
</CustomField>