unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_IPA__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_IPA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asendia Carrier Account IPA</description>
    <inlineHelpText>Asendia Carrier Account IPA</inlineHelpText>
    <label>Carrier Account IPA</label>
    <type>Checkbox</type>
</CustomField>