unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_Is_Reseller__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_Is_Reseller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carrier Account Is Reseller</label>
    <type>Checkbox</type>
</CustomField>