unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_ISAL__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_ISAL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asendia Account ISAL</description>
    <inlineHelpText>Asendia Account ISAL</inlineHelpText>
    <label>Carrier Account ISAL</label>
    <type>Checkbox</type>
</CustomField>