unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_Other__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asendia Account Other</description>
    <inlineHelpText>Asendia Account Other</inlineHelpText>
    <label>Carrier Account Other</label>
    <type>Checkbox</type>
</CustomField>