unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_PMEI__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_PMEI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asendia Account PMEI</description>
    <inlineHelpText>Asendia Account PMEI</inlineHelpText>
    <label>Carrier Account PMEI</label>
    <type>Checkbox</type>
</CustomField>