unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Account_Priority_Tracked__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Account_Priority_Tracked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carrier Account Priority Tracked</label>
    <type>Checkbox</type>
</CustomField>