unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Carrier_Test_Account_Password__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Carrier_Test_Account_Password__c</fullName>
    <label>Carrier Test Account Password</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>