unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__CarrierAccount_APISecretEncrypted__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CarrierAccount_APISecretEncrypted__c</fullName>
    <label>Carrier Account API Secret</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>