unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__CarrierAccount_HasCreditCard__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CarrierAccount_HasCreditCard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carrier Account Has Credit Card</label>
    <type>Checkbox</type>
</CustomField>