unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__CarrierAccount_PrintAsYouGo__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CarrierAccount_PrintAsYouGo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Australia Post Print as you go</description>
    <label>Carrier Account Print As You Go</label>
    <type>Checkbox</type>
</CustomField>