unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Convert_4x6_GIF_to_PDF__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Convert_4x6_GIF_to_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert 4x6 GIF to PDF</label>
    <type>Checkbox</type>
</CustomField>