unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Create_Labels__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Create_Labels__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Labels</label>
    <type>Checkbox</type>
</CustomField>