unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Custom_Meta__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Custom_Meta__c</fullName>
    <label>Custom Meta</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>