unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__HideNegotiatedRates__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__HideNegotiatedRates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Negotiated Rates</label>
    <type>Checkbox</type>
</CustomField>