unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__IncludeImageResolution__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IncludeImageResolution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allows to include Image Resolution drop-down to Wizard page</description>
    <inlineHelpText>Allows to include Image Resolution drop-down to Wizard page</inlineHelpText>
    <label>Include Image Resolution</label>
    <type>Checkbox</type>
</CustomField>