unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__IncludeMailInnovations__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IncludeMailInnovations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Mail Innovations Packaging Types</label>
    <type>Checkbox</type>
</CustomField>