unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__IncludeSurePost__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__IncludeSurePost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Sure Post Service Types</label>
    <type>Checkbox</type>
</CustomField>