unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Individual_Package_Items__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Individual_Package_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Package Items</label>
    <type>Checkbox</type>
</CustomField>