unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__LastBoughtPostageAmount__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LastBoughtPostageAmount__c</fullName>
    <label>Last Bought Postage Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>