unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__LastBoughtPostageTime__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__LastBoughtPostageTime__c</fullName>
    <label>Last Bought Postage Time</label>
    <type>DateTime</type>
</CustomField>