unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Schedule_Report__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Schedule_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Report</label>
    <type>Checkbox</type>
</CustomField>