unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__SecurityAnswerEncrypt__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__SecurityAnswerEncrypt__c</fullName>
    <label>Security Answer</label>
    <length>50</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>