unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__Supports_Inbound__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Supports_Inbound__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supports Inbound</label>
    <type>Checkbox</type>
</CustomField>