unpackaged/main/default/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__WebPasswordEncrypted__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__WebPasswordEncrypted__c</fullName>
    <label>Web Password</label>
    <length>17</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>